# md-manager

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  CLAUDE.md  Cargo.toml  Dockerfile.api  LICENSE  README.md  SECURITY.md  TODO.md  docker-compose.logto.yml
.github/workflows/: ci.yml
apps/api/: Cargo.toml
apps/api/src/: dto.rs  error.rs  google.rs  handlers.rs  main.rs  mcp.rs  oauth.rs  oauth_server.rs  session.rs  state.rs
apps/api/tests/fixtures/: test_key.pem
apps/cli/: Cargo.toml
apps/cli/src/: config.rs  main.rs
apps/mcp/: Cargo.toml
apps/mcp/src/: main.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  secret.rs  tracing_init.rs
crates/core/: Cargo.toml
crates/core/src/: chunk.rs  crypto.rs  error.rs  ids.rs  lib.rs  mcp.rs  merge.rs  model.rs  oauth.rs  rbac.rs  validate.rs
crates/db/: Cargo.toml
crates/db/src/: access.rs  apikey.rs  auditlog.rs  auth.rs  category.rs  document.rs  embedding.rs  lib.rs  oauth.rs  org.rs  rows.rs  search.rs  share.rs  social.rs  tag.rs
crates/db/tests/: integration.rs  members.rs  oauth.rs  sharing.rs
crates/embed/: Cargo.toml
crates/embed/src/: lib.rs
docs/: PLAN.md  deploy-dokploy.md  embeddings.md  oauth-builtin.md  oauth-logto.md
frontend/: .dockerignore  .env.local.example  .gitignore  Dockerfile  README.md  middleware.ts  next.config.mjs  package-lock.json  package.json  smoke-test.sh  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx
frontend/app/(app)/: layout.tsx
frontend/app/(app)/documents/[id]/: page.tsx
frontend/app/(app)/projects/: page.tsx
frontend/app/(app)/projects/[slug]/: page.tsx
frontend/app/(app)/search/: page.tsx
frontend/app/(app)/settings/keys/: page.tsx
frontend/app/(app)/settings/members/: page.tsx
frontend/app/(marketing)/: layout.tsx  page.tsx
frontend/app/(marketing)/docs/: layout.tsx  page.tsx
frontend/app/(marketing)/docs/cli/: page.tsx
frontend/app/(marketing)/docs/connectors/: page.tsx
frontend/app/(marketing)/docs/mcp/: page.tsx
frontend/app/auth/callback/: route.ts
frontend/app/auth/google/: route.ts
frontend/app/auth/switch/: route.ts
frontend/app/invite/[token]/: page.tsx
frontend/app/login/: page.tsx
frontend/app/oauth/consent/: actions.ts  page.tsx
frontend/app/onboarding/: page.tsx
frontend/app/s/[token]/: page.tsx
frontend/components/: code-block.tsx  doc-ui.tsx  docs-sidebar.tsx  editor.tsx  empty-state.tsx  invite-form.tsx  key-creator.tsx  logo.tsx  mobile-nav.tsx  nav.tsx  page-header.tsx  share-box.tsx  site-footer.tsx  site-header.tsx
frontend/lib/: actions.ts  api.ts  docs.ts  google-oauth.ts  safe-next.ts  session.ts
frontend/public/: robots.txt
migrations/: 0001_init.sql  0002_logto_sub.sql  0003_categories.sql  0004_teams_grants.sql  0005_share_links.sql  0006_chunk_content_hash.sql  0007_embedding_backoff.sql  0008_web_auth.sql  0009_oauth_server.sql  0010_share_audience.sql  0011_oauth_all_orgs.sql
scripts/: db-roles.sql  db-setup.sh
