[package]
name = "mdm-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "md-manager HTTP API (Axum): web-app BFF target and REST surface for the CLI."

[dependencies]
mdm-core.workspace = true
mdm-config.workspace = true
mdm-db.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
axum = "0.8"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
anyhow = "1"
