[package]
name = "mdm-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "md-manager CLI (`mdm`): an HTTP client over the API for humans and shell-capable agents."

[[bin]]
name = "mdm"
path = "src/main.rs"

[dependencies]
mdm-client.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1"
