[package]
name = "mdm-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "md-manager MCP server (stdio JSON-RPC) exposing the document tools to AI agents."

[dependencies]
mdm-client.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util"] }
