[package]
name = "mdm-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Async HTTP client for the md-manager API, shared by the MCP server and the CLI."

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
