[package]
name = "mdm-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Framework-agnostic domain models, repository traits, RBAC, and errors for md-manager."

[dependencies]
thiserror.workspace = true
uuid.workspace = true
serde.workspace = true
time.workspace = true
