[package]
name = "mdm-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Framework-agnostic domain models, RBAC, merge, chunking, and crypto for md-manager."

[dependencies]
thiserror.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true

# Crypto + content hashing (API keys, share tokens, content_hash, PKCE S256)
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
base64 = "0.22"
subtle = "2"
rand = "0.9"

# 3-way merge for concurrent edits
diffy = "0.4"
