[package]
name = "mdm-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "SQLx repository implementations, migrations, and the TenantDb RLS wrapper."

[dependencies]
mdm-core.workspace = true
uuid.workspace = true
time.workspace = true
serde_json.workspace = true
sqlx = { version = "0.8", default-features = false, features = [
    "postgres",
    "runtime-tokio",
    "uuid",
    "time",
    "migrate",
    "macros",
] }
tracing = "0.1"
anyhow = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
mdm-config.workspace = true
# Integration tests share one Postgres DB and reset its schema in setup(); serialize them.
serial_test = "3"
